@@ -18,6 +18,13 @@
       <charset>us-ascii</charset>
     </text>
   </lang>
+  <autodetect>
+    <general>
+      <commandset>BJ,LQ,BJL,BJRaster</commandset>
+      <manufacturer>Canon</manufacturer>
+      <model>BJC-4100</model>
+    </general>
+  </autodetect>
   <functionality>A</functionality>
   <driver>bjc600</driver>
   <comments>
