@@ -1,5 +1,7 @@
 2010-04-16  Tim Waugh <twaugh@redhat.com>
 
+	* db/source/printer/Canon-BJC-4100.xml: Added IEEE 1284 Device
+	  ID (RH bug #583060).
 	* db/source/printer/HP-Color_LaserJet_3800.xml: Added IEEE
 	  1284 Device ID (RH bug #581936).
 	* db/source/printer/HP-DeskJet_D2300.xml: Added IEEE 1284
